[feature] filter data, like propertis from page buildingDetail, add price in card and detailPage. [Fixed] hamburguer menu change z-index, carousel validatearray images and url implements, replace router in cardPreview for link.

--- a/liveHomeFrontend/src/styles/components/BuildingDetail.module.sass
+++ b/liveHomeFrontend/src/styles/components/BuildingDetail.module.sass
@@ -35,6 +35,21 @@
   font-size: 20px
   font-weight: bold
 
+.buildingDetail__price
+  width: 100%
+  padding: 15px 0px 0px
+  display: flex
+
+.buildingDetail__price span
+  font-size: 20px
+  color: $secondary-extra-dark
+
+.buildingDetail__price p
+  font-size: 16px
+  color: $secondary-extra-dark
+  margin: 0
+  padding: 0
+
 .buildingDetail__description p
   margin: 0
   color: #828191
