--- a/liveHomeFrontend/src/styles/components/CardPreviewPublication.module.sass
+++ b/liveHomeFrontend/src/styles/components/CardPreviewPublication.module.sass
@@ -14,10 +14,13 @@
   justify-content: space-between
   padding-bottom: $spacing*4
 
-.buildings__card_detail_title p
+.buildings__card_detail_title a
   margin: 0
   font-size: 20px
   font-weight: bold
+  text-decoration: none
+  cursor: pointer
+  color: $secondary-extra-dark
 
 .buildings__card_detail_price
   padding-bottom: $spacing*3
